2006-10-05  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tcl.h: note limitation on changing Tcl_UniChar size
	* generic/tclEncoding.c (UtfToUnicodeProc, UnicodeToUtfProc): 
	* tests/encoding.test (encoding-16.1): fix alignment issues in
	unicode <> utf conversion procs. [Bug 1122671]

2006-10-05  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclVar.c (Tcl_LappendObjCmd):
	* tests/append.test(4.21-22): fix for longstanding [Bug 1570718],
	lappending nothing to non-list. Reported by lvirden

2006-10-02  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclFileName.c (TclGlob):	Prevent doubling of directory
	separators by [glob].  [Bug 1569042]

2006-10-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tclWinFile.c: Handle possible missing define.
	* win/tclWinFile.c: Backported fix for bug #1420432 (cannot set 
	* tests/cmdAH.test: mtime for directories on windows).

2006-09-30  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclUtil.c (Tcl_SplitList): optimisation, [Patch 1344747]
	by dgp.

2006-09-26  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/makefile.vc:  Updated MSVC build to properly deal with
	* win/nmakehlp.c:   MSVC8 and AMD64 target. Backport from 8.5
	* win/rules.vc:
	* generic/tcl.h:    Fixed stat definition for MSVC8 AMD64.
	* win/tclWinSock.c: Casting type police.
	* win/tclWinTime.c:

2006-09-26  Don Porter  <dgp@users.sourceforge.net>

	* generic/tcl.h:	As 2006-09-22 commit from Donal K. Fellows
	demonstrates, "#define NULL 0" is just wrong, and as a quotable chat
	figure observed, "If NULL isn't defined, we're not using a C compiler."
	Improper fallback definition of NULL removed.

2006-09-25  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIO.c (Tcl_StackChannel): Fixed [SF Tcl Bug 1564642],
	  aka coverity #51. Extended loop condition, added checking for
	  NULL to prevent seg.fault.

2006-09-25  Andreas Kupries <andreask@activestate.com>

	* generic/tclBasic.c: Reverted exposure of patchlevel in