@@ -1,5 +1,9 @@
 2006-10-05  Jeff Hobbs  <jeffh@ActiveState.com>
 
+	* library/http/http.tcl (http::geturl): only do geturl url rfc
+	3986 validity checking if $::http::strict is true (default false
+	for 8.5).  [Bug 1560506]
+
 	* generic/tcl.h: note limitation on changing Tcl_UniChar size
 	* generic/tclEncoding.c (UtfToUnicodeProc, UnicodeToUtfProc): 
 	* tests/encoding.test (encoding-16.1): fix alignment issues in
